* [Bug 1057] ntpdc unconfig failure
(4.2.5p165) 2009/04/23 Released by Harlan Stenn <stenn@ntp.org>
* WWVB refclock cleanup from Dave Mills.
* Code cleanup: requested_key -> request_key.
* [Bug 833] ignore whitespace at end of remote configuration lines
* [Bug 1033] ntpdc/ntpq crash prompting for keyid on Windows
* [Bug 1154] mDNS registration should be done later, repeatedly and only
  if asked for.
* [Bug 1028] Support for W32Time authentication via Samba.
* quiet ntp_parser.c malloc redeclaration warning
* Mitigation and PPS/PPSAPI cleanup from Dave Mills.
* Documentation updates from Dave Mills.
* timepps-Solaris.h patches from Dave Hart.
(4.2.5p164) 2009/04/22 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p7-RC3)
* PPS/PPSAPI cleanup from Dave Mills.
* Documentation updates from Dave Mills.
* [Bug 1125] C runtime per-thread initialization on Windows
* [Bug 1152] temporarily disable refclock_parse, refclock_true until
  maintainers can repair build break from pps_sample()
* [Bug 1153] refclock_nmea should not mix UTC with GPS time
* [Bug 1159] ntpq overlap diagnostic message test buggy
(4.2.5p163) 2009/04/10 Released by Harlan Stenn <stenn@ntp.org>
(4.2.5p162) 2009/04/09 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* Mitigation and PPS cleanup from Dave Mills.
* Include (4.2.4p7-RC2)
* [Bug 216] New interpolation scheme for Windows eliminates 1ms jitter
* remove a bunch of #ifdef SYS_WINNT from portable code
* 64-bit time_t cleanup for building on newer Windows compilers
* Only set CMOS clock during ntpd exit on Windows if the computer is
  shutting down or restarting.
* [Bug 1148] NMEA reference clock improvements
* remove deleted gsoc_sntp/utilities.o from repository so that .o build
  products can be cleaned up without corrupting the repository.
(4.2.5p161) 2009/03/31 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
(4.2.5p160) 2009/03/30 Released by Harlan Stenn <stenn@ntp.org>