@@ -1,4 +1,5 @@
 * [Bug 1057] ntpdc unconfig failure
+* [Bug 1161] unpeer AKA unconfig command for ntpq :config
 (4.2.5p165) 2009/04/23 Released by Harlan Stenn <stenn@ntp.org>
 * WWVB refclock cleanup from Dave Mills.
 * Code cleanup: requested_key -> request_key.
